--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>J Gao</title>
-</head>
-<body>
+	<head>
+		<meta http-equiv="Refresh" content="0; url=https://chrome.google.com/webstore/detail/onlyfans-downloader/oncijbkbmebnjlnghhpjcoeeagokpaal" />
+	</head>
+	<body>
 
-</body>
+	</body>
 </html>
