add anchor link

--- a/onlyfans-downloader-privacy-policy.html
+++ b/onlyfans-downloader-privacy-policy.html
@@ -6,7 +6,7 @@
 <body>
     <h1>OnlyFans Downloader Chrome extension Privacy Policy</h1>
     <p>
-        The OnlyFans Downloader Chrome extension doesn't collect or share any personal user information from you.
+        The <a href="https://chrome.google.com/webstore/detail/onlyfans-downloader/oncijbkbmebnjlnghhpjcoeeagokpaal">OnlyFans Downloader Chrome extension</a> doesn't collect or share any personal user information from you.
     </p>
 
 </body>
