https://github.com/nickbalestra/kactus

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="Refresh" content="0; url=https://chrome.google.com/webstore/detail/onlyfans-downloader/oncijbkbmebnjlnghhpjcoeeagokpaal" />
-	</head>
-	<body>
+---
+profile: false
+---
 
-	</body>
-</html>
+{% include post-list.html %}
+{% include footer.html %}
