blank index page

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 profile: false
 ---
 
-{% include post-list.html %}
-{% include footer.html %}
+<!-- {% include post-list.html %}
+{% include footer.html %} -->
