update file served

--- a/notice.html
+++ b/notice.html
@@ -1,1 +1,39 @@
-<p>Generate Lorem Ipsum placeholder text for use in your graphic, print and web layouts, and discover plugins for your favorite writing, design and blogging tools.💩</p>
+<style>
+body {
+    text-align: center;
+    padding: 15px;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+body {
+    font: 18px Helvetica, sans-serif;
+    color: #333;
+}
+
+p {
+    display: block;
+    text-align: left;
+    width: 360px;
+    margin: 10px auto;
+}
+
+a {
+    color: #e67e22;
+    text-decoration: none;
+}
+
+em {
+    color: #e74c3c;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #e74c3c;
+    text-decoration: none;
+}
+</style>
+<em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn">Want one for JustFor.fans? You got it!</a></em>
+<!-- <p style="color:red; font-size: 16">Hey! I'm aware that the extension isn't working right now (they updated their website yet again..) I've submitted the fix to Chrome web store and it's pending review.💩</p> -->
