--- a/notice.html
+++ b/notice.html
@@ -35,5 +35,5 @@ a:hover {
     text-decoration: none;
 }
 </style>
-<em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn">Want one for JustFor.fans? You got it!</a></em>
+<em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em>
 <!-- <p style="color:red; font-size: 16">Hey! I'm aware that the extension isn't working right now (they updated their website yet again..) I've submitted the fix to Chrome web store and it's pending review.💩</p> -->
