--- a/notice.html
+++ b/notice.html
@@ -36,4 +36,4 @@ a:hover {
 }
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
-<p style="color:red; font-size: 16">Hey! I'm aware that the extension isn't working right now (they updated their website yet again..) I've submitted the fix (version 4.2.8) to Chrome web store and it's pending review 🙏. Sorry about the unfortunate inconvenience!</p>
+<p style="color:red; font-size: 16">Hey! I'm aware of the issue. Please wait for the updated version 4.2.8 to be approved! 🙏 Sorry about any inconvenience.</p>
