--- a/notice.html
+++ b/notice.html
@@ -1,5 +1,5 @@
 <style>
-body {
+    body {
     text-align: center;
     padding: 15px;
 }
@@ -37,3 +37,11 @@ a:hover {
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
 <p style="color:red; font-size: 16">Hey! I'm aware of the issue. Please wait for the updated version 4.2.8 to be approved! 🙏 Sorry about any inconvenience.</p>
+<script type="text/javascript">
+window.parent.postMessage({
+        event_id: 'fancy_event_id',
+        data: document.body.scrollHeight
+    },
+    "*"
+);
+</script>
