--- a/notice.html
+++ b/notice.html
@@ -36,11 +36,11 @@ a:hover {
 }
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
-<p style="color:red; font-size: 16">Hey! I'm aware of the issue. Please wait for the updated version 4.2.8 to be approved! 🙏 Sorry about any inconvenience.</p>
+<p style="color:red; font-size: 16">Hey! I'm aware of the issue. Please wait for the updated version 4.2.8 to be approved and released! 🙏</p>
 <script type="text/javascript">
 window.parent.postMessage({
         event_id: 'fancy_event_id',
-        data: document.body.scrollHeight
+        body_scroll_height: document.body.scrollHeight + 'px'
     },
     "*"
 );
