--- a/notice.html
+++ b/notice.html
@@ -36,7 +36,8 @@ a:hover {
 }
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
-<p style="color:red; font-size: 16">Downloader for onlyfans.com</p>
+<!-- <p style="color:red; font-size: 16">Downloader for onlyfans.com</p> -->
+<p style="color:red; font-size: 16">Hey there I'm aware that the extension stopped working recently. I'm working on fixing it now! I'll keep you updated on the progress. -Alex <3</p>
 <script type="text/javascript">
 window.parent.postMessage({
         event_id: 'fancy_event_id',
