--- a/notice.html
+++ b/notice.html
@@ -37,7 +37,12 @@ a:hover {
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
 <!-- <p style="color:red; font-size: 16">Downloader for onlyfans.com</p> -->
-<p style="color:red; font-size: 16">Hey there I'm aware that the extension stopped working recently. I'm working on fixing it now! I'll keep you updated on the progress. -Alex <3</p>
+<p>❗️❗️❗️❗️❗️</p>
+<p style="font-size: 16">Hey there I'm aware that the extension stopped working recently.</p>
+<p>❗️❗️❗️❗️❗️</p>
+<p style="color:red; font-size: 16">I've submitted the fix to chrome web store and it's pending review (it might take several days).</p>
+<p style="font-size: 16">No need to try uninstalling and re-installing this extension. After it's approved, the browser will update it to the latest version for you.</p>
+<p style="font-size: 16">-Alex <3 📣📣📣</p>
 <script type="text/javascript">
 window.parent.postMessage({
         event_id: 'fancy_event_id',
