--- a/notice.html
+++ b/notice.html
@@ -36,13 +36,15 @@ a:hover {
 }
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
-<!-- <p style="color:red; font-size: 16">Downloader for onlyfans.com</p> -->
-<p>❗️❗️❗️❗️❗️</p>
+<p style="color:red; font-size: 18">Downloader for onlyfans.com</p>
+
+<!-- <p>❗️❗️❗️❗️❗️</p>
 <p style="font-size: 16">Hey there I'm aware that the extension stopped working recently.</p>
 <p>❗️❗️❗️❗️❗️</p>
 <p style="color:red; font-size: 16">I've submitted the fix to chrome web store and it is pending review (it might take several days).</p>
 <p style="font-size: 16">No need to try uninstalling and re-installing this extension. After it's approved, the browser will update it to the latest version for you.</p>
-<p style="font-size: 16">Alex <3</p>
+<p style="font-size: 16">Alex <3</p> -->
+
 <script type="text/javascript">
 window.parent.postMessage({
         event_id: 'fancy_event_id',
