--- a/notice-ff.html
+++ b/notice-ff.html
@@ -36,11 +36,13 @@ a:hover {
 }
 </style>
 <!-- <em><a href="https://chrome.google.com/webstore/detail/downloader-for-justforfan/gdachlcgnfbgcjcmeiemgbpfahloadjn" target="_blank">Want one for JustFor.fans? You got it!</a></em> -->
-<!-- <p style="color:red; font-size: 18">Downloader for onlyfans.com</p> -->
 
-<p>❗️❗️❗️❗️❗️</p>
+<p style="color:red; font-size: 18">Downloader for onlyfans.com</p>
+
+<!-- <p>❗️❗️❗️❗️❗️</p>
 <p style="font-size: 16">Hey there the bulk download feature is coming back soon (it was unfortunately broken by a website update) - the new version is pending review by the chrome web store team.</p>
-<p>❗️❗️❗️❗️❗️</p>
+<p>❗️❗️❗️❗️❗️</p> -->
+
 <!-- <p style="color:red; font-size: 16">I've submitted the fix to chrome web store and it is pending review (it might take several days).</p>
 <p style="font-size: 16">No need to try uninstalling and re-installing this extension. After it's approved, the browser will update it to the latest version for you.</p>
 <p style="font-size: 16">Alex <3</p> -->
