--- a/notice.html
+++ b/notice.html
@@ -40,7 +40,7 @@ a:hover {
 
 <p>📣📣📣📣📣</p>
 <p style="font-size: 16">This extension just had a Firefox version (with the bulk download feature available). You can use it with the Firefox browser.</p>
-<a href="https://addons.mozilla.org/en-US/firefox/addon/downloader-for-onlyfans-com/" style="font-size: 16">Firefox Extension Link</a>
+<a href="https://addons.mozilla.org/en-US/firefox/addon/downloader-for-onlyfans-com/" style="font-size: 16" target="_blank">Firefox Extension Link</a>
 <p>📣📣📣📣📣</p>
 
 <p>❗️❗️❗️❗️❗️</p>
