--- a/notice.html
+++ b/notice.html
@@ -43,10 +43,10 @@ a:hover {
 <a href="https://addons.mozilla.org/en-US/firefox/addon/downloader-for-onlyfans-com/" style="font-size: 16" target="_blank">Firefox Extension Link</a>
 <p>📣📣📣📣📣</p> -->
 
-<!-- <p>📣📣📣📣📣</p>
-<p style="font-size: 16">The videos downloaded by this extension are of the <em>original quality</em> same as what the creator originally uploaded. However a new version is coming that'll grant you the option to specify the quality for downloads (original/240p/720p). It's under review currently. 🤞</p>
-<p>Stay safe everyone! 🙏 -Alex</p>
-<p>📣📣📣📣📣</p> -->
+<p>📣📣📣📣📣</p>
+<p style="font-size: 16"> Fix for the direct messages issue is coming up. 🤞</p>
+<p>-Alex</p>
+<p>📣📣📣📣📣</p>
 
 <!-- <p>❗️❗️❗️❗️❗️</p>
 <p style="font-size: 16">Hey there the bulk download feature is coming back soon (it was unfortunately broken by a website update) - the new version is pending review by the chrome web store team. It's taking a longer time than usual ¯\_(ツ)_/¯</p>
